Changed Capital I to lowercase in images folder name, also added javascript basics folder to play around in

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
                 <div id="masonry">
                     <img src="images/astro.jpeg" alt="astro" id="astr0" />
-                    <img src="images/Azrael.jpeg" alt="astro" id="Azrael" />
+                    <img src="images/Azrael.jpeg" alt="Azrael" id="Azrael" />
                     <img src="images/bear.jpeg" alt="astro" id="bear" />
                     <img src="images/eagle.jpeg" alt="astro" id="eagle" />
                     <img src="images/falcon.jpeg" alt="astro" id="falcon" />
