Removed all extra files

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <img src="images/pancake.jpeg" alt="astro" id="pancake" />
                     <img src="images/Panda.jpeg" alt="astro" id="Panda" />
                     <img src="images/tiger.jpeg" alt="astro" id="tiger" />
-                    <img src="images/wolf.jpeg" alt="astro" id="wolf" />
+                    <img src=ges/wolf.jpeg" alt="astro" id="wolf" />
                 </div>           
             
         </header>
