corrected alt text and fixed small typo

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
 
                 <div id="masonry">
                     <img src="images/astro.jpeg" alt="astro" id="astr0" />
-                    <img src="images/Azrael.jpeg" alt="Azrael" id="Azrael" />
-                    <img src="images/bear.jpeg" alt="astro" id="bear" />
-                    <img src="images/eagle.jpeg" alt="astro" id="eagle" />
-                    <img src="images/falcon.jpeg" alt="astro" id="falcon" />
-                    <img src="images/lion.jpeg" alt="astro" id="lion" />
-                    <img src="images/lynx.jpeg" alt="astro" id="lynx" />
-                    <img src="images/pancake.jpeg" alt="astro" id="pancake" />
-                    <img src="images/Panda.jpeg" alt="astro" id="Panda" />
-                    <img src="images/tiger.jpeg" alt="astro" id="tiger" />
-                    <img src=ges/wolf.jpeg" alt="astro" id="wolf" />
+                    <img src="images/Azrael.jpeg" alt="azrael" id="Azrael" />
+                    <img src="images/bear.jpeg" alt="bear" id="bear" />
+                    <img src="images/eagle.jpeg" alt="eagle" id="eagle" />
+                    <img src="images/falcon.jpeg" alt="falcon" id="falcon" />
+                    <img src="images/lion.jpeg" alt="lion" id="lion" />
+                    <img src="images/lynx.jpeg" alt="lynx" id="lynx" />
+                    <img src="images/pancake.jpeg" alt="pancakes" id="pancake" />
+                    <img src="images/Panda.jpeg" alt="panda" id="Panda" />
+                    <img src="images/tiger.jpeg" alt="tiger" id="tiger" />
+                    <img src="images/wolf.jpeg" alt="wolf" id="wolf" />
                 </div>           
             
         </header>
